--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -20,6 +21,7 @@
     "express": "^5.1.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
+    "pg": "^8.16.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -40,6 +42,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.16.2",
+    "prisma": "^6.8.2",
     "supertest": "^7.1.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.2.6",
