--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,13 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "typeRoots": ["./node_modules/@types", "./types"],
     "incremental": true,
     "plugins": [
       {
